tests/ui/frontmatter/frontmatter-whitespace-1.stderr
error: invalid preceding whitespace for frontmatter opening
  --> $DIR/frontmatter-whitespace-1.rs:1:1
   |
LL |   ---
   | ^^^^^
   |
note: frontmatter opening should not be preceded by whitespace
  --> $DIR/frontmatter-whitespace-1.rs:1:1
   |
LL |   ---
   | ^^

error: unclosed frontmatter
  --> $DIR/frontmatter-whitespace-1.rs:1:3
   |
LL | /   ---
LL | |
LL | |
LL | |   ---
LL | |
   | |_^
   |
note: frontmatter opening here was not closed
  --> $DIR/frontmatter-whitespace-1.rs:1:3
   |
LL |   ---
   |   ^^^

error: aborting due to 2 previous errors

